--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev-tools":"tsx ./core/tools.ts",
+    "dev-generate-object":"tsx ./core/generate-object.ts",
+    "dev-generate-text":"tsx ./core/generate-text.ts",
+    "dev-stream-object":"tsx ./core/stream-object.ts",
+    "dev-stream-text":"tsx ./core/stream-text.ts"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.4",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "ai": "^3.1.9",
+    "@ai-sdk/google": "^0.0.23",
+    "@ai-sdk/openai": "^0.0.33",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "ai": "^3.2.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.366.0",
+    "lucide-react": "^0.396.0",
     "nanoid": "^5.0.7",
-    "next": "~14.2.3",
+    "next": "~14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
@@ -26,16 +32,17 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.2",
+    "@types/node": "^20.14.7",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.4",
+    "eslint": "^9.5.0",
+    "eslint-config-next": "14.2.4",
+    "json-colorizer": "^3.0.1",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "tsx": "^4.10.3",
-    "typescript": "^5.4.5"
+    "tailwindcss": "^3.4.4",
+    "tsx": "^4.15.7",
+    "typescript": "^5.5.2"
   }
 }
