--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "dev-tools":"tsx ./core/tools.ts",
-    "dev-generate-object":"tsx ./core/generate-object.ts",
-    "dev-generate-text":"tsx ./core/generate-text.ts",
-    "dev-stream-object":"tsx ./core/stream-object.ts",
-    "dev-stream-text":"tsx ./core/stream-text.ts"
+    "dev-tools": "tsx ./core/tools.ts",
+    "dev-generate-object": "tsx ./core/generate-object.ts",
+    "dev-generate-text": "tsx ./core/generate-text.ts",
+    "dev-stream-object": "tsx ./core/stream-object.ts",
+    "dev-stream-text": "tsx ./core/stream-text.ts"
   },
   "dependencies": {
     "@ai-sdk/google": "^0.0.23",
@@ -19,11 +19,14 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "ai": "^3.2.5",
+    "chrome-ai": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.396.0",
     "nanoid": "^5.0.7",
     "next": "~14.2.4",
+    "ollama": "^0.5.2",
+    "ollama-ai-provider": "^0.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
