--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint . --fix",
     "dev-tools": "tsx ./core/tools.ts",
     "dev-generate-object": "tsx ./core/generate-object.ts",
     "dev-generate-text": "tsx ./core/generate-text.ts",
@@ -35,6 +35,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "^1.5.15",
+    "@nirtamir2/eslint-config": "^0.0.2-beta.9",
     "@types/node": "^20.14.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -42,8 +44,12 @@
     "dotenv": "^16.4.5",
     "eslint": "^9.5.0",
     "eslint-config-next": "14.2.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "json-colorizer": "^3.0.1",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2"
