--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --fix",
+    "format": "prettier ** --write --ignore-unknown",
     "dev-tools": "tsx ./core/tools.ts",
     "dev-generate-object": "tsx ./core/generate-object.ts",
     "dev-generate-text": "tsx ./core/generate-text.ts",
