--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.5.15",
     "@nirtamir2/eslint-config": "^0.0.2-beta.9",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.14.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -45,12 +46,15 @@
     "dotenv": "^16.4.5",
     "eslint": "^9.5.0",
     "eslint-config-next": "14.2.4",
+    "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "json-colorizer": "^3.0.1",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
+    "prettier-plugin-packagejson": "^2.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2"
