--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@agentic/stdlib": "^6.2.3",
     "@ai-sdk/google": "^0.0.23",
     "@ai-sdk/openai": "^0.0.33",
     "@radix-ui/react-label": "^2.1.0",
